Is there a path option that works?

--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'poetry'
-          cache-dependency-path: 'main/pyproject.toml'
+          path: main
+          # cache-dependency-path: 'main/pyproject.toml'
 
       - name: Install dependencies
         run: |
