--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -25,8 +25,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'poetry'
-          path: main
-          # cache-dependency-path: 'main/pyproject.toml'
+          cache-dependency-path: 'main/poetry.lock'
 
       - name: Install dependencies
         run: |
