--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -24,8 +24,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-          cache: 'poetry'
-          cache-dependency-path: 'main/poetry.lock'
+
+      # Ideally we'd use the built-in caching support from actions/setup-python,
+      # but it doesn't work when not installing the root directory. Sigh.
+      # See: https://github.com/actions/setup-python/issues/476
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: hashFiles('main/poetry.lock')
 
       - name: Install dependencies
         run: |
