--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -48,13 +48,13 @@ jobs:
       # Actually publish it to github pages -----------------------------------
 
       - uses: actions/checkout@v3
-        if: github.ref == 'refs/heads/main'
         with:
           ref: gh-pages
           path: pages
 
       - name: Commit Build to gh-pages
-        if: github.ref == 'refs/heads/main'
+        env:
+          COMMIT: ${{ github.ref == 'refs/heads/main' && 'true' || '' }}
         run: |
           cp -R main/out/* pages/
           cd pages
@@ -63,10 +63,13 @@ jobs:
             echo 'Committing changes to gh-pages...'
             git diff
 
-            git config user.name 'GH Actions Bot'
-            git config user.email 'actions.bot@example.com'
+            if [ -n "$COMMIT" ]; then
+              exit 0
+              # git config user.name 'GH Actions Bot'
+              # git config user.email 'actions.bot@example.com'
 
-            git add .
-            git commit -m 'Update gh-pages RSS feeds from main branch'
-            git push
+              # git add .
+              # git commit -m 'Update gh-pages RSS feeds from main branch'
+              # git push
+            fi
           fi
