--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -3,7 +3,9 @@ name: Publish RSS
 on:
   # Run at 6am and 6pm ET every day.
   schedule:
-    - cron: 15 11,23 * * *
+    # TODO: disable this temporary test of quick timing!
+    # - cron: '15 11,23 * * *'
+    - cron: '*/5 * * * *'
   # Or on demand in the GitHub UI.
   workflow_dispatch: {}
   # And on pull requests (but it won't actuall publish unless it's on `main`).
