Add system deps in cirun.io

--- a/.github/workflows/cirun-job-test.yaml
+++ b/.github/workflows/cirun-job-test.yaml
@@ -13,6 +13,12 @@ jobs:
   build_rss:
     runs-on: [self-hosted, cirun-runner]
     steps:
+      - name: System Dependencies
+        run: |
+          # cirun.io images don't have all the builtins GH-hosted runners do
+          apt-get update
+          apt-get install -y pyenv pipx
+
       # Check out the source in `main/` and the gh-pages branch where we publish
       # output in `pages/`.
       - uses: actions/checkout@v3
