Use sudo for cirun.io

--- a/.github/workflows/cirun-job-test.yaml
+++ b/.github/workflows/cirun-job-test.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: System Dependencies
         run: |
           # cirun.io images don't have all the builtins GH-hosted runners do
-          apt-get update
-          apt-get install -y pyenv pipx
+          sudo apt-get update
+          sudo apt-get install -y pyenv pipx
 
       # Check out the source in `main/` and the gh-pages branch where we publish
       # output in `pages/`.
