--- a/.github/workflows/cirun-job-test.yaml
+++ b/.github/workflows/cirun-job-test.yaml
@@ -15,7 +15,7 @@ jobs:
         run: |
           # cirun.io images don't have all the builtins GH-hosted runners do
           sudo apt-get update
-          sudo apt-get install -y python3-venv
+          sudo apt-get install -y python3-venv python3-pip
           python3 -m pip install --user pipx
           python3 -m pipx ensurepath
 
