More cirun.io wrangling

--- a/.github/workflows/cirun-job-test.yaml
+++ b/.github/workflows/cirun-job-test.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd main
-          poetry install
+          python3 -m poetry install
 
       - name: Create RSS Files
         env:
