--- a/.github/workflows/publish-rss.yml
+++ b/.github/workflows/publish-rss.yml
@@ -1,11 +1,9 @@
 name: Publish RSS
 
 on:
-  # Run at 6am and 6pm ET every day.
+  # Run at 6am ET every day.
   schedule:
-    # TODO: disable this temporary test of quick timing!
-    # - cron: '15 11,23 * * *'
-    - cron: '*/5 * * * *'
+    - cron: '15 11 * * *'
   # Or on demand in the GitHub UI.
   workflow_dispatch: {}
   # And on pull requests (but it won't actuall publish unless it's on `main`).
